--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,19 +1,27 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
   <div class="container">
-    <a class="navbar-brand" href="#">Aplicación de Citas</a>
-    <ul class="navbar-nav mr-auto" *ngIf="accountService | async">
-      <li class="nav-item">
-        <a class="nav-link" href="#">Matches</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Listas</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Mensajes</a>
-      </li>
+    <a class="navbar-brand" routerLink="/">Aplicación de Citas</a>
+    <ul class="navbar-nav mr-auto" >
+      <ng-container *ngIf="loginUser">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/members" routerLinkActive="active"
+            >Matches</a
+          >
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/lists" routerLinkActive="active"
+            >Listas</a
+          >
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/messages" routerLinkActive="active"
+            >Mensajes</a
+          >
+        </li>
+      </ng-container>
     </ul>
-    <div class="dropdown" *ngIf="accountService | async" dropdown>
-      <a class="dropdown-toggle text-light" dropdownToggle>Welcome user</a>
+    <div class="dropdown" *ngIf="(accountService.currentUser$ | async) as user" dropdown>
+      <a class="dropdown-toggle text-light" dropdownToggle>Welcome {{ user.username | titlecase }}</a>
       <div class="dropdown-menu mt-3" *dropdownMenu>
         <a class="dropdown-item">Edit profile</a>
         <div class="dropdown-divider"></div>
@@ -21,7 +29,7 @@
       </div>
     </div>
     <form
-      *ngIf="(accountService | async) === null"
+      *ngIf="!loginUser"
       #loginForm="ngForm"
       class="d-flex"
       (ngSubmit)="login()"
@@ -41,7 +49,7 @@
         type="password"
         placeholder="Contraseña"
       />
-      <button class="btn btn-outline-success" type="submit">Login</button>
+      <button class="btn btn-success" type="submit">Login</button>
     </form>
   </div>
 </nav>
