--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -1,1 +1,61 @@
-<p>member-detail works!</p>
+<div class="row" *ngIf="member">
+  <div class="col-4">
+    <div class="card">
+      <img
+        src="{{ member.photoUrl || './assets/user.png' }}"
+        alt="{{ member.knownAs }}"
+        class="card-img-top img-thumbnail"
+      />
+      <div class="card-body">
+        <div>
+          <strong>Localidad:</strong>
+          <p>{{ member.city }}, {{ member.country }}</p>
+        </div>
+        <div>
+          <strong>Edad:</strong>
+          <p>{{ member.age }}</p>
+        </div>
+        <div>
+          <strong>Ultima Actividad:</strong>
+          <p>{{ member.lastActivate }}</p>
+        </div>
+        <div>
+          <strong>Fecha de ingreso:</strong>
+          <p>{{ member.created }}</p>
+        </div>
+      </div>
+      <div class="card-footer">
+        <div class="btn-group d-flex">
+          <button class="btn btn-primary">Me gusta</button>
+          <button class="btn btn-success">Mensaje</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col-8">
+    <tabset class="member-tabset">
+      <tab heading="A cerca de {{ member.knownAs }}">
+        <h4>Description</h4>
+        <p>{{ member.introduction }}</p>
+        <h4>Lokking for</h4>
+        <p>{{ member.lookingFor }}</p>
+      </tab>
+      <tab heading="Intereses">
+        <h4>Intereses</h4>
+        <p>{{ member.interests }}</p>
+      </tab>
+      <tab heading="Fotos">
+        <ngx-gallery
+          [options]="galleryOptions"
+          [images]="galleryImages"
+          class="ngx-gallery"
+          style="display: inline-block; margin-bottom: 20px;"
+        >
+        </ngx-gallery>
+      </tab>
+      <tab heading="Mensajes">
+        <p>Mensajes aqui</p>
+      </tab>
+    </tabset>
+  </div>
+</div>
