--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -85,7 +85,7 @@
         </form>
       </tab>
       <tab heading="Editar Fotos">
-        <h4>Puedes editar tus fotos aqui</h4>
+        <app-photo-editor [member]="member"></app-photo-editor>
       </tab>
     </tabset>
   </div>
