--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,27 +1,66 @@
-<form #registerForm="ngForm" (ngSubmit)="register()" autocomplete="off">
+<form [formGroup]="registerForm" (ngSubmit)="registerForm.valid && register()" autocomplete="off">
   <h2 class="text-center text-primary">Registrate!</h2>
   <hr />
-  <div class="form-group">
-    <input
-      type="text"
-      class="form-control"
-      name="username"
-      [(ngModel)]="model.username"
-      placeholder="Nombre de usuario"
-    />
-  </div>
 
   <div class="form-group">
-    <input
-      type="password"
-      class="form-control"
-      name="password"
-      [(ngModel)]="model.password"
-      placeholder="Contraseña"
-    />
+    <label for="" class="contro-label" style="margin-right: 10px"
+      >Genero:</label
+    >
+    <label for="" class="radio-inline">
+      <input type="radio" value="masculino" formControlName="gender" />Masculino
+    </label>
+    <label for="" class="radio-inline">
+      <input
+        type="radio"
+        value="femenino"
+        formControlName="gender"
+        class="ml-3"
+      />Femenino
+    </label>
+  </div>
+
+  <app-text-input
+    [formControl]="registerForm.controls['username']"
+    [label]="'Nombre de usuario'"
+  ></app-text-input>
+  <app-text-input
+    [formControl]="registerForm.controls['knownAs']"
+    [label]="'Conocido como'"
+  ></app-text-input>
+  <app-date-input
+    [formControl]="registerForm.controls['dateOfBirth']"
+    [label]="'Fecha de nacimiento'"
+    [maxDate]="maxDate"
+  ></app-date-input>
+  <app-text-input
+    [formControl]="registerForm.controls['city']"
+    [label]="'Ciudad'"
+  ></app-text-input>
+  <app-text-input
+    [formControl]="registerForm.controls['country']"
+    [label]="'Pais'"
+  ></app-text-input>
+  <app-text-input
+    [formControl]="registerForm.controls['password']"
+    [label]="'Contraseña'"
+    [type]="'Password'"
+  ></app-text-input>
+  <app-text-input
+    [formControl]="registerForm.controls['confirmPassword']"
+    [label]="'Confirmar contrseña'"
+    [type]="'Password'"
+  ></app-text-input>
+  <div class="row mt-5" *ngIf="validationErrors.length > 0">
+    <ul class="text-danger">
+      <li *ngFor="let error of validationErrors">
+        {{ error }}
+      </li>
+    </ul>
   </div>
   <div class="form-group text-center">
-      <button class="btn btn-success mr-2" type="submit">Registrar</button>
-      <button class="btn btn-default mr-2" (click)="cancel()" type="button">Cancelar</button>
+    <button [disabled]="!registerForm.valid" class="btn btn-success mr-2" type="submit">Registrar</button>
+    <button class="btn btn-default mr-2" (click)="cancel()" type="button">
+      Cancelar
+    </button>
   </div>
 </form>
