--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -30,7 +30,7 @@
         </div>
         <div>
           <strong>Fecha de ingreso:</strong>
-          <p>{{ member.created }}</p>
+          <p>{{ member.created | date: 'dd MMMM YYYY' }}</p>
         </div>
       </div>
       <div class="card-footer">
