--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -6,7 +6,7 @@
                 <button routerLink='/members/{{member.username}}' class="btn btn-primary">
                     <i class="fa fa-user"></i>
                 </button>
-                <button class="btn btn-primary">
+                <button class="btn btn-primary" (click)="addLike(member)">
                     <i class="fa fa-heart"></i>
                 </button>
                 <button class="btn btn-primary">
@@ -17,7 +17,7 @@
     </div>
     <div class="card-body p-1">
         <h6 class="card-title text-center mb-1"><i class="fa fa-user mr-2"></i>
-            {{ member.knownAs }}
+            {{ member.knownAs }}, {{ member.age }}
         </h6>
         <p class="card-text text-muted text-center">{{ member.city }}</p>
     </div>
