--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -21,7 +21,7 @@
         </div>
         <div>
           <strong>Fecha de ingreso:</strong>
-          <p>{{ member.created }}</p>
+          <p>{{ member.created | date: 'dd MMMM YYYY' }}</p>
         </div>
       </div>
       <div class="card-footer">
