--- a/client/src/app/members/member-messages/member-messages.component.html
+++ b/client/src/app/members/member-messages/member-messages.component.html
@@ -1,8 +1,16 @@
 <div class="card">
   <div class="card-body">
-    <div *ngIf="messages?.length === 0">No hay mensajes</div>
-    <ul *ngIf="messages?.length > 0" class="chat">
-      <li *ngFor="let message of messages">
+    <div *ngIf="(messageService.messageThread$ | async)?.length === 0">
+      No hay mensajes
+    </div>
+    <ul
+      #scrollMe
+      style="overflow: scroll; height: 500px"
+      [scrollTop]="scrollMe.scrollHeight"
+      *ngIf="(messageService.messageThread$ | async).length > 0"
+      class="chat"
+    >
+      <li *ngFor="let message of messageService.messageThread$ | async">
         <div>
           <span class="chat-img float-right">
             <img
@@ -49,7 +57,13 @@
           placeholder="Envia un mensaje"
         />
         <div class="input-group-append">
-          <button [disabled]="!messageForm.valid" class="btn btn-primary" type="submit">Enviar</button>
+          <button
+            [disabled]="!messageForm.valid"
+            class="btn btn-primary"
+            type="submit"
+          >
+            Enviar
+          </button>
         </div>
       </div>
     </form>
